added & styled footer, made nav bar sticky

--- a/style/homePage.css
+++ b/style/homePage.css
@@ -5,49 +5,88 @@ body {
     color: #2D2422;
 }
 
-.navigation { /* style bar */
-    background-color: #777653;
-    display: flex;
-    justify-content: flex-end;
-    margin: 0%;
-}
-
-.navigation a { /*styling links */
-    font-size: 25px;
-    margin: 10px 16px;
-    color: #2D2422;
-    text-decoration: none;
-    
-}
-
 p {
     font-size: 20px;
 }
 
-h1 {
+a {
+    color: #2D2422;
+    text-decoration: none; /* no underline */
+  }
+
+/* NAVIGATION */
+.navigation { /* style bar */
+    background-color: #BEB886;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0%;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+}
+
+.navigation a { /*styling links */
+    font-size: 25px;
+    margin: 10px 16px;   
+}
+
+/* HERO */
+.hero {
+    display: flex;
+    padding: 100px 20px;
+    justify-content: center;
+    background-color: #BEB886;
+}
+
+.hero h {
     font-size: 70px;
     font-family: "Bigshot One", serif;
 }
 
-.header {
-    display: flex;
-    padding: 100px 20px;
-    justify-content: space-evenly;
-    background-color: #BEB886;
-}
-
-.header .description {
+.hero .description {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-#profileImage {
+.hero img {
     width: 30%;
     height: 30%;
     border-radius: 5%;
     border: 10px solid #777653;
     min-width: 400px;
     min-height: 400px;
+    margin-left: 30px;
 }
 
+/* PROJECTS */
+.projects {
+    display: flex;
+    margin: 100px;
+}
+
+
+/* FOOTER */
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 2px #BEB886 solid;
+    padding: 0px 10px;
+}
+
+.footer p {
+    font-size: 15px;
+    color: #736865;  
+}
+
+.footer a {
+    font-size: 15px;
+    color: #736865;
+    padding: 0px 5px;
+
+}
+
+.icons {
+    display: flex;
+}
