--- a/style/homePage.css
+++ b/style/homePage.css
@@ -33,7 +33,7 @@ a {
 /* HERO */
 .hero {
     display: flex;
-    padding: 100px 20px;
+    padding: 200px 20px;
     justify-content: center;
     background-color: #BEB886;
 }
@@ -61,7 +61,7 @@ a {
 
 /* PROJECTS */
 .projects {
-    display: flex;
+    /* display: flex; */
     margin: 100px;
 }
 
