--- a/style/homePage.css
+++ b/style/homePage.css
@@ -12,7 +12,11 @@ p {
 a {
     color: #2D2422;
     text-decoration: none; /* no underline */
-  }
+}
+
+h {
+    font-family: "Bigshot One", serif;
+}
 
 /* NAVIGATION */
 .navigation { /* style bar */
@@ -40,7 +44,6 @@ a {
 
 .hero h {
     font-size: 70px;
-    font-family: "Bigshot One", serif;
 }
 
 .hero .description {
@@ -61,8 +64,29 @@ a {
 
 /* PROJECTS */
 .projects {
-    /* display: flex; */
-    margin: 100px;
+    display: flex;
+    margin: 50px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projects h {
+    font-size: 50px;
+}
+
+.projectsGrid {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.projectTile {
+    width:800px;
+    height:200px;
+    background:#BEB886;
+    text-align: center;
+    margin: 10px 10px;
+    border-radius: 10px; /*jagged ends*/
 }
 
 
