--- a/style/aboutMe.css
+++ b/style/aboutMe.css
@@ -34,25 +34,25 @@ h {
     margin: 10px 16px;   
 }
 
-/* HERO */
-.hero {
+/* ABOUT ME */
+.aboutMe {
     display: flex;
     padding: 200px 20px;
     justify-content: center;
     background-color: #BEB886;
 }
 
-.hero h {
+.aboutMe h {
     font-size: 70px;
 }
 
-.hero .description {
+.aboutMe p {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.hero img {
+.aboutMe img {
     width: 30%;
     height: 30%;
     border-radius: 5%;
@@ -61,34 +61,6 @@ h {
     min-height: 400px;
     margin-left: 30px;
 }
-
-/* PROJECTS */
-.projects {
-    display: flex;
-    margin: 50px;
-    flex-direction: column;
-    align-items: center;
-}
-
-.projects h {
-    font-size: 50px;
-}
-
-.projectsGrid {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.projectTile {
-    width:800px;
-    height:200px;
-    background:#BEB886;
-    text-align: center;
-    margin: 10px 10px;
-    border-radius: 10px; /*jagged ends*/
-}
-
 
 /* FOOTER */
 .footer {
