--- a/style/homePage.css
+++ b/style/homePage.css
@@ -86,7 +86,7 @@ h {
     background:#BEB886;
     text-align: center;
     margin: 10px 10px;
-    border-radius: 10px; /*jagged ends*/
+    border-radius: 10px;
 }
 
 
